[gd_scene load_steps=9 format=3 uid="uid://c5h0614qa13mh"]

[ext_resource type="Script" uid="uid://36la5hxulw6c" path="res://scripts/menu/main_menu.gd" id="1_c67eb"]
[ext_resource type="Theme" uid="uid://dvmur811eqaun" path="res://assets/themes/menu_button_list.tres" id="3_hh8cs"]
[ext_resource type="Script" uid="uid://dpkek3ls343it" path="res://scripts/menu/menu.gd" id="3_rdx8w"]
[ext_resource type="FontFile" uid="uid://5g0c1fwbh4w5" path="res://assets/fonts/AtlantisText-Bold.ttf" id="5_b6xvh"]
[ext_resource type="Script" uid="uid://coackst1gtgo2" path="res://scripts/menu/options.gd" id="5_cwgiw"]
[ext_resource type="Theme" uid="uid://dt0x4ngoh82te" path="res://assets/themes/grid_menu.tres" id="6_ohy3q"]

[sub_resource type="Theme" id="Theme_cwgiw"]
OptionButton/styles/disabled = null
OptionButton/styles/focus = null
OptionButton/styles/hover = null
OptionButton/styles/hover_pressed = null
OptionButton/styles/hover_pressed_mirrored = null
OptionButton/styles/normal = null
OptionButton/styles/normal_mirrored = null
OptionButton/styles/pressed = null
OptionButton/styles/pressed_mirrored = null
PopupMenu/colors/font_hover_color = Color(0.94902, 0.686275, 0.407843, 1)
PopupMenu/constants/indent = 0
PopupMenu/styles/hover = null
PopupMenu/styles/panel = null

[sub_resource type="Theme" id="Theme_pdh6n"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("options", "menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c67eb")
options = NodePath("CenterContainer/Options")
menu = NodePath("CenterContainer/Menu")

[node name="bc" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8499292, 0.54589653, 0.26820412, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="MarginContainer" parent="CenterContainer" node_paths=PackedStringArray("start_button", "continue_button", "options_button", "exit_button")]
layout_mode = 2
script = ExtResource("3_rdx8w")
start_button = NodePath("CenterContainer/MenuButtonList/Start")
continue_button = NodePath("CenterContainer/MenuButtonList/Continue")
options_button = NodePath("CenterContainer/MenuButtonList/Options")
exit_button = NodePath("CenterContainer/MenuButtonList/Exit")

[node name="ColorRect" type="ColorRect" parent="CenterContainer/Menu"]
layout_mode = 2
color = Color(0, 0, 0, 0.631373)

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/Menu"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="MenuButtonList" type="VBoxContainer" parent="CenterContainer/Menu/CenterContainer"]
layout_mode = 2
theme = ExtResource("3_hh8cs")

[node name="Start" type="Button" parent="CenterContainer/Menu/CenterContainer/MenuButtonList"]
layout_mode = 2
theme = ExtResource("3_hh8cs")
theme_type_variation = &"FlatButton"
text = "start"
flat = true

[node name="Continue" type="Button" parent="CenterContainer/Menu/CenterContainer/MenuButtonList"]
visible = false
layout_mode = 2
theme = ExtResource("3_hh8cs")
theme_type_variation = &"FlatButton"
text = "Continue
"
flat = true

[node name="Options" type="Button" parent="CenterContainer/Menu/CenterContainer/MenuButtonList"]
layout_mode = 2
theme = ExtResource("3_hh8cs")
theme_type_variation = &"FlatButton"
text = "Options
"
flat = true

[node name="Exit" type="Button" parent="CenterContainer/Menu/CenterContainer/MenuButtonList"]
layout_mode = 2
theme = ExtResource("3_hh8cs")
theme_type_variation = &"FlatButton"
text = "exit
"
flat = true

[node name="Options" type="MarginContainer" parent="CenterContainer" node_paths=PackedStringArray("master_val", "music_val", "sfx_val", "slider_master_val", "slider_music_val", "slider_sfx_val")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("5_cwgiw")
master_val = NodePath("MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MasterVal")
music_val = NodePath("MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2/MusicVal")
sfx_val = NodePath("MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3/SFXVal")
slider_master_val = NodePath("MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MasterVolSlider")
slider_music_val = NodePath("MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2/MusicVolSlider")
slider_sfx_val = NodePath("MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3/SFXVolSlider")

[node name="Panel" type="Panel" parent="CenterContainer/Options"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer/Options"]
layout_mode = 2
color = Color(0.51151925, 0.25135908, 0.06563138, 0.6313726)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Options"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Options/MarginContainer"]
layout_mode = 2

[node name="Graphic" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4

[node name="Label" type="Label" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer/MarginContainer2"]
layout_mode = 2
focus_mode = 2
accessibility_description = "Options Section"
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 32
text = "Graphic"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="ColorRect" type="ColorRect" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="GridContainer" type="GridContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme = ExtResource("6_ohy3q")
columns = 2

[node name="VSync" type="Label" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer/MarginContainer3/GridContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
accessibility_name = "b"
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 34
text = "V-sync"
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer/MarginContainer3/GridContainer"]
layout_mode = 2
accessibility_name = "b"
accessibility_description = "V-Sync"
button_pressed = true
expand_icon = true

[node name="Label" type="Label" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer/MarginContainer3/GridContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 34
text = "Window mode"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer/MarginContainer3/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="OptionButton" type="OptionButton" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer/MarginContainer3/GridContainer/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_cwgiw")
theme_override_colors/font_pressed_color = Color(0.94902, 0.686275, 0.407843, 1)
theme_override_colors/font_hover_color = Color(0.94902, 0.686275, 0.407843, 1)
theme_override_colors/font_hover_pressed_color = Color(0.94902, 0.686275, 0.407843, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 4
theme_override_constants/icon_max_width = 0
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 34
theme_override_constants/arrow_margin = 3
selected = 0
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Full Screen"
popup/item_1/id = 1
popup/item_2/text = "Exclusive Full Screen"
popup/item_2/id = 2

[node name="Audio" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4

[node name="Label" type="Label" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer2"]
layout_mode = 2
focus_mode = 2
accessibility_description = "Options Section"
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 32
text = "Audio"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="ColorRect" type="ColorRect" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme = SubResource("Theme_pdh6n")

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_ohy3q")
theme_override_constants/margin_left = 9

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 34
text = "Master"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="MasterVolSlider" type="HSlider" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 1
accessibility_description = "Master volume"
value = 100.0
rounded = true

[node name="MasterVal" type="Label" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 34
text = "100%"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 34
text = "Music   "

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 41

[node name="MusicVolSlider" type="HSlider" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 1
accessibility_description = "Music volume"
value = 50.0
rounded = true

[node name="MusicVal" type="Label" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 34
text = "100%"

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 34
text = "SFX       "

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 44

[node name="SFXVolSlider" type="HSlider" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 1
accessibility_description = "SFX volume"
value = 100.0
rounded = true

[node name="SFXVal" type="Label" parent="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_b6xvh")
theme_override_font_sizes/font_size = 34
text = "100%"

[node name="MenuBack" type="Button" parent="CenterContainer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
accessibility_name = "Back to menu button"
theme = ExtResource("3_hh8cs")
theme_type_variation = &"FlatButton"
text = "< Menu"
flat = true
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureButton" type="TextureButton" parent="MarginContainer"]
visible = false
layout_mode = 2

[connection signal="pressed" from="CenterContainer/Menu/CenterContainer/MenuButtonList/Start" to="CenterContainer/Menu" method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/CenterContainer/MenuButtonList/Continue" to="CenterContainer/Menu" method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/CenterContainer/MenuButtonList/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/CenterContainer/MenuButtonList/Exit" to="CenterContainer/Menu" method="_on_exit_pressed"]
[connection signal="toggled" from="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer/MarginContainer3/GridContainer/CheckBox" to="CenterContainer/Options" method="_on_check_box_toggled"]
[connection signal="item_selected" from="CenterContainer/Options/MarginContainer/VBoxContainer/Graphic/VBoxContainer/MarginContainer3/GridContainer/MarginContainer/OptionButton" to="CenterContainer/Options" method="_on_option_button_item_selected"]
[connection signal="value_changed" from="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MasterVolSlider" to="CenterContainer/Options" method="_on_master_vol_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2/MusicVolSlider" to="CenterContainer/Options" method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Options/MarginContainer/VBoxContainer/Audio/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3/SFXVolSlider" to="CenterContainer/Options" method="_on_sfx_vol_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/Options/MarginContainer/VBoxContainer/MenuBack" to="." method="_on_menu_back_pressed"]
[connection signal="pressed" from="MarginContainer/TextureButton" to="CenterContainer/Menu" method="_on_texture_button_pressed"]
